tests/snapshots/active_pipeline_goldens__native_pipeline_direct_fn_ability_call.snap
---
source: tests/active_pipeline_goldens.rs
expression: ir_text
---
core.module @direct_fn_native {
  !_closure = adt.struct() {fields = [[@func_ptr, core.i32], [@env, tribute_rt.anyref]], name = @_closure}
  !__tribute_cps_control = adt.enum() {name = @__tribute_cps_control, variants = [[@Normal, [tribute_rt.anyref]], [@Escape, [core.i32, tribute_rt.anyref]]]}
  !t1 = func.func_sig<(tribute_rt.anyref) -> tribute_rt.anyref>
  !t2 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !t0 = func.func_sig<(!t2, tribute_rt.anyref, tribute_rt.anyref) -> tribute_rt.anyref>
  !t3 = func.func_sig<(!t2, tribute_rt.anyref, core.i32, tribute_rt.anyref) -> tribute_rt.anyref>

  func.func @__tribute_evidence_lookup_handler(%arg0: core.ptr, %arg1: core.i32) -> core.ptr attributes {abi = "C"}

  func.func @__tribute_evidence_lookup_tr(%arg0: core.ptr, %arg1: core.i32) -> core.ptr attributes {abi = "C"}

  func.func @__tribute_evidence_empty() -> core.ptr attributes {abi = "C"}

  func.func @__tribute_next_tag() -> core.i32 attributes {abi = "C"}

  func.func @__tribute_evidence_extend(%arg0: core.ptr, %arg1: core.i32, %arg2: core.i32, %arg3: core.ptr, %arg4: core.ptr) -> core.ptr attributes {abi = "C"}

  func.func @__tribute_evidence_lookup(%arg0: core.ptr, %arg1: core.i32) -> core.i32 attributes {abi = "C"}

  func.func @"direct_fn_native::__lambda_0"(%0: !t2, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      func.return %2
  }

  func.func @"direct_fn_native::__lambda_1"(%0: !t2, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = adt.variant_new %2 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
      func.return %3
  }

  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = func.call {callee = @__tribute_evidence_empty} : core.ptr
      %1 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %2 = func.constant {func_ref = @"direct_fn_native::__lambda_0"} : !t1
      %3 = adt.struct_new %2, %1 {type = !_closure} : !_closure
      %4 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %5 = func.constant {func_ref = @"run::__clam_0"} : !t1
      %6 = adt.struct_new %5, %4 {type = !_closure} : !_closure
      %7 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %8 = func.constant {func_ref = @"direct_fn_native::__lambda_1"} : !t1
      %9 = adt.struct_new %8, %7 {type = !_closure} : !_closure
      %10 = func.call {callee = @__tribute_evidence_empty} : core.ptr
      %11 = adt.struct_get %6 {field = 0, type = !_closure} : core.i32
      %12 = adt.struct_get %6 {field = 1, type = !_closure} : tribute_rt.anyref
      %13 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %14 = func.constant {func_ref = @"run::__clam_1"} : func.func_sig<(tribute_rt.anyref, core.i32, core.i32, tribute_rt.anyref) -> tribute_rt.anyref>
      %15 = adt.struct_new %14, %13 {type = !_closure} : !_closure
      %16 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %17 = func.constant {func_ref = @"run::__clam_2"} : func.func_sig<(core.i32, tribute_rt.anyref) -> tribute_rt.anyref>
      %18 = adt.struct_new %17, %16 {type = !_closure} : !_closure
      %19 = func.call {callee = @__tribute_next_tag} : core.i32
      %20 = arith.const {value = 1361557906} : core.i32
      %21 = tribute_rt.into_raw %18 : core.ptr
      %22 = tribute_rt.into_raw %15 : core.ptr
      %23 = func.call %0, %20, %19, %21, %22 {callee = @__tribute_evidence_extend} : core.ptr
      %24 = func.call_indirect %11, %23, %12, %9 {signature = func.func_sig<(!t2, tribute_rt.anyref, !_closure) -> tribute_rt.anyref>} : tribute_rt.anyref
      %25 = adt.variant_is %24 {tag = @Normal, type = !__tribute_cps_control} : core.i1
      %26 = scf.if %25 : tribute_rt.anyref {
          %27 = adt.variant_cast %24 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
          %28 = adt.variant_get %27 {field = 0, tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
          %29 = tribute_rt.unbox_int %28 : core.i32
          %30 = func.call {callee = @__tribute_evidence_empty} : core.ptr
          %31 = adt.struct_get %3 {field = 0, type = !_closure} : core.i32
          %32 = adt.struct_get %3 {field = 1, type = !_closure} : tribute_rt.anyref
          %33 = func.call_indirect %31, %23, %32, %28 {signature = !t0} : tribute_rt.anyref
          scf.yield %33
      } {
          %34 = adt.variant_cast %24 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
          %35 = adt.variant_get %34 {field = 0, tag = @Escape, type = !__tribute_cps_control} : core.i32
          %36 = adt.variant_get %34 {field = 1, tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
          %37 = arith.cmpi %35, %19 {predicate = @eq} : core.i1
          %38 = scf.if %37 : tribute_rt.anyref {
              %39 = func.call {callee = @__tribute_evidence_empty} : core.ptr
              %40 = adt.struct_get %3 {field = 0, type = !_closure} : core.i32
              %41 = adt.struct_get %3 {field = 1, type = !_closure} : tribute_rt.anyref
              %42 = func.call_indirect %40, %39, %41, %36 {signature = !t0} : tribute_rt.anyref
              scf.yield %42
          } {
              scf.yield %24
          }
          scf.yield %38
      }
      %43 = tribute_rt.unbox_int %26 : core.i32
      %44 = arith.const {value = unit} : core.nil
      func.return %44
  }

  func.func @"run::__clam_0"(%0: !t2, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = func.call {callee = @__tribute_evidence_empty} : core.ptr
      %4 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %5 = arith.const {value = 1361557906} : core.i32
      %6 = func.call %0, %5 {callee = @__tribute_evidence_lookup_tr} : core.ptr
      %7 = arith.const {value = 664197438} : core.i32
      %8 = adt.struct_get %6 {field = 0, type = !_closure} : core.i32
      %9 = adt.struct_get %6 {field = 1, type = !_closure} : tribute_rt.anyref
      %10 = func.call_indirect %8, %0, %9, %7, %4 {signature = !t3} : tribute_rt.anyref
      %11 = tribute_rt.unbox_int %10 : core.i32
      %12 = arith.const {value = 1361557906} : core.i32
      %13 = func.call %0, %12 {callee = @__tribute_evidence_lookup_tr} : core.ptr
      %14 = arith.const {value = 2110389019} : core.i32
      %15 = adt.struct_get %13 {field = 0, type = !_closure} : core.i32
      %16 = adt.struct_get %13 {field = 1, type = !_closure} : tribute_rt.anyref
      %17 = func.call_indirect %15, %0, %16, %14, %10 {signature = !t3} : tribute_rt.anyref
      %18 = core.unrealized_conversion_cast %17 : core.nil
      %19 = core.unrealized_conversion_cast %2 : closure.closure(!t1)
      %20 = adt.struct_get %19 {field = 0, type = !_closure} : core.i32
      %21 = adt.struct_get %19 {field = 1, type = !_closure} : tribute_rt.anyref
      %22 = func.call_indirect %20, %0, %21, %10 {signature = !t0} : tribute_rt.anyref
      func.return %22
  }

  func.func @"run::__clam_1"(%0: !t2, %1: tribute_rt.anyref, %2: tribute_rt.anyref, %3: core.i32, %4: core.i32, %5: tribute_rt.anyref) -> tribute_rt.anyref {
      %6 = arith.const {value = 664197438} : core.i32
      %7 = arith.cmpi %4, %6 {predicate = @eq} : core.i1
      %8 = scf.if %7 : tribute_rt.anyref {
          %9 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
          %10 = func.constant {func_ref = @"direct_fn_native::__lambda_0"} : !t1
          %11 = adt.struct_new %10, %9 {type = !_closure} : !_closure
          %12 = arith.const {value = 41} : core.i32
          %13 = tribute_rt.box_int %12 : tribute_rt.anyref
          %14 = adt.struct_get %11 {field = 0, type = !_closure} : core.i32
          %15 = adt.struct_get %11 {field = 1, type = !_closure} : tribute_rt.anyref
          %16 = func.call_indirect %14, %0, %15, %13 {signature = !t0} : tribute_rt.anyref
          scf.yield %16
      } {
          %17 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
          %18 = func.constant {func_ref = @"direct_fn_native::__lambda_0"} : !t1
          %19 = adt.struct_new %18, %17 {type = !_closure} : !_closure
          %20 = arith.const {value = unit} : core.nil
          %21 = core.unrealized_conversion_cast %20 : tribute_rt.anyref
          %22 = adt.struct_get %19 {field = 0, type = !_closure} : core.i32
          %23 = adt.struct_get %19 {field = 1, type = !_closure} : tribute_rt.anyref
          %24 = func.call_indirect %22, %0, %23, %21 {signature = !t0} : tribute_rt.anyref
          scf.yield %24
      }
      func.return %8
  }

  func.func @"run::__clam_2"(%0: !t2, %1: tribute_rt.anyref, %2: core.i32, %3: tribute_rt.anyref) -> tribute_rt.anyref {
      %4 = arith.const {value = 664197438} : core.i32
      %5 = arith.cmpi %2, %4 {predicate = @eq} : core.i1
      %6 = scf.if %5 : tribute_rt.anyref {
          %7 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
          %8 = func.constant {func_ref = @"direct_fn_native::__lambda_0"} : !t1
          %9 = adt.struct_new %8, %7 {type = !_closure} : !_closure
          %10 = arith.const {value = 41} : core.i32
          %11 = tribute_rt.box_int %10 : tribute_rt.anyref
          %12 = adt.struct_get %9 {field = 0, type = !_closure} : core.i32
          %13 = adt.struct_get %9 {field = 1, type = !_closure} : tribute_rt.anyref
          %14 = func.call_indirect %12, %0, %13, %11 {signature = !t0} : tribute_rt.anyref
          scf.yield %14
      } {
          %15 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
          %16 = func.constant {func_ref = @"direct_fn_native::__lambda_0"} : !t1
          %17 = adt.struct_new %16, %15 {type = !_closure} : !_closure
          %18 = arith.const {value = unit} : core.nil
          %19 = core.unrealized_conversion_cast %18 : tribute_rt.anyref
          %20 = adt.struct_get %17 {field = 0, type = !_closure} : core.i32
          %21 = adt.struct_get %17 {field = 1, type = !_closure} : tribute_rt.anyref
          %22 = func.call_indirect %20, %0, %21, %19 {signature = !t0} : tribute_rt.anyref
          scf.yield %22
      }
      func.return %6
  }
}
