tests/snapshots/active_pipeline_goldens__shared_pipeline_mixed_nested_handler_boundary.snap
---
source: tests/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(&ir_text, false)"
---
main: Some(Cps) (core.array<adt.struct<_Marker>>, Frame<core.nil>) -> (core.never)
  func.call operands=2 results=1: 1
  func.tail_call operands=2 results=0: 1
run_all: Some(Cps) (core.array<adt.struct<_Marker>>, Frame<core.i32>) -> (core.never)
  effect.extend operands=4 results=1: 1
  func.call operands=0 results=1: 1
  func.call operands=2 results=1: 3
  func.call operands=5 results=1: 1
  func.tail_call operands=2 results=0: 1
run_state_with_console: Some(Cps) (core.array<adt.struct<_Marker>>, Frame<core.i32>) -> (core.never)
  effect.extend operands=4 results=1: 1
  func.call operands=0 results=1: 1
  func.call operands=2 results=1: 3
  func.call operands=5 results=1: 1
  func.tail_call operands=2 results=0: 1
step: Some(Cps) (core.array<adt.struct<_Marker>>, Frame<core.i32>) -> (core.never)
  effect.dispatch_cps operands=4 results=0: 1
  effect.dispatch_tail operands=2 results=1: 1
